force-app/main/default/objects/Produto_filho_de_importacao__c/Produto_filho_de_importacao__c.object-meta.xml
<CustomObject>
    <label>Produto Filho de Importação</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Nº</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Produtos Filhos de Importação</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>