force-app/main/default/objects/Produto_filho_de_importacao__c/fields/Produto_filho__c.field-meta.xml
<CustomField>
    <fullName>Produto_filho__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto filho</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Produtos Filhos de Importação (Produto filho)</relationshipLabel>
    <relationshipName>Produtos_Filhos_de_Importa_o1</relationshipName>
    <type>Lookup</type>
</CustomField>