force-app/main/default/objects/Produto_filho_de_importacao__c/fields/Produto_pai__c.field-meta.xml
<CustomField>
    <fullName>Produto_pai__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto pai</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Produtos_Filhos_de_importa_o</relationshipName>
    <type>Lookup</type>
</CustomField>